2003-03-29  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* dccserver.mdoc: document -e.
	* dccserver.man: regen.

	* dccserver.c (main): add option (-e) to echo input.
	(usage): mention -e.
	(handle_input): echo input if flag set.
	Idea for -e from Robert Polzer.

	* dccserver.c (main): add fflush(stdout).
	(display_remote_line): Here too. From Rudolf Polzer.

	* dccserver.mdoc: document -i option.
	* dccserver.man: regen.

	* dccserver.c (main): add option (-i) to not filter out control
	characters.
	(converse_with_client): move display code to ...
	(display_remote_line): new function, and honor option to display
	control characters.
	(usage): mention -i here too.
	Idea for -i from Rudolf Polzer.

2003-01-28  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* dccserver.c (get_file): only warn if we really get more than
	expected, not if we just get all the bytes.

	* dccserver.mdoc: remove a superfluous word.
	* dccserver.man: regen.

2003-01-23  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* dccserver.c (communicate_with_client): remove unused variable.

	* config.guess: update to 2003-01-10, prompted by Aubin Paul.
	* config.sub: update to 2003-01-22, prompted by Aubin Paul.

2003-01-22  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* configure.ac: Bump version to 0.2.

	* configure.ac: check for seteuid.
	* dccserver.c: add more prototypes for replacement functions.
	(main): ifdef out seteuid if not existing.

	* dccserver.mdoc: update for using chroot and setuid.
	* dccserver.man: regen.

	* dccserver.c: allow receiving more than expected number of
	bytes, but show a warning. From Per von Zweigbergk
	<pvz@e.kth.se>.
	(main): chdir to "/" in chroot.

	* configure.ac: use autoconf 2.57.

	* Makefile.am (install-exec-hook): allow installation to succeed
	if chown/chmod for installing dccserver setuid root fail.

	* dccserver.c: add prototype for strlcpy if needed. Suggestion by
	Per von Zweigbergk <pvz@e.kth.se>.