@@ -1,0 +1,4 @@
+Athan <code@miggy.org>
+Aubin Paul <debian@outlyer.org>
+Per von Zweigbergk <pvz@e.kth.se>
+Rudolf Polzer <atfield@durchnull.de>
